--- a/practic/index.html
+++ b/practic/index.html
@@ -6,10 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <p>Hello World</p>
+    <button class="bt" id="btn">Click</button>
+    <button class="bt">Click</button>
+    <button class="bt">Click</button>
+
+    <a href="https://www.udemy.com/course/javascript_full/learn/lecture/19132760#questions">Youtube</a>
+
     <script src="js/script.js"></script>
 </body>
 
