--- a/newP/002/index.html
+++ b/newP/002/index.html
@@ -242,7 +242,7 @@
                 <div class="title">Акция для новых клиентов!</div>
                 <div class="promotion__descr">
                     Мы ценим каждого клиента и предлагаем вам стать одним из них на очень выгодных условиях. Каждому, кто закажет доставку питание на неделю, будет предоставлена скидка в размере <span>20%!</span>
-                    <br><br> Акция закончится 20 мая в 00:00
+                    <br><br> Акция закончится 23 Сентября в 00:00
                 </div>
             </div>
             <div class="promotion__timer">
